rm scala